// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button snapshots > css mode snapshot 1`] = `
"import React from 'react';
import styles from './Button.module.css';
export type ButtonVariant = 'default' | 'primary' | 'secondary' | 'outline' | 'ghost' | 'link' | 'destructive';
export type ButtonSize    = 'xs' | 'sm' | 'md' | 'lg' | 'icon';

export interface ButtonProps extends React.ButtonHTMLAttributes<HTMLButtonElement> {
  variant?:  ButtonVariant;
  size?:     ButtonSize;
  loading?:  boolean;
  children:  React.ReactNode;
}

export const ButtonRoot = React.forwardRef<HTMLButtonElement, ButtonProps>(
  ({ variant = 'primary', size = 'md', loading = false, disabled, children, className, ...props
 }, ref) => {
    const cls = [
      styles.btn,
      styles[\`btn--\${variant}\`],
      styles[\`btn--\${size}\`],
      loading  && styles['btn--loading'],
      disabled && styles['btn--disabled'],
      className,
    ].filter(Boolean).join(' ');

    return (
      <button
        ref={ref}
        className={cls}
        disabled={disabled || loading}
        aria-disabled={disabled || loading}
        aria-busy={loading}
        {...props}
      >
        {children}
      </button>
    );
  }
);

export const ButtonLabel = ({ children, className, ...props }: React.HTMLAttributes<HTMLSpanElement>) => (
  <span className={className} {...props}>{children}</span>
);

export const ButtonSpinner = ({ className, ...props }: React.HTMLAttributes<HTMLSpanElement>) => (
  <span className={[styles.spinner, className].filter(Boolean).join(' ')} aria-hidden="true" {...props} />
);

export const ButtonIcon = ({ children, className, ...props }: React.HTMLAttributes<HTMLSpanElement>) => (
  <span className={className} aria-hidden="true" {...props}>{children}</span>
);

export const Button = Object.assign(ButtonRoot, {
  Label: ButtonLabel,
  Spinner: ButtonSpinner,
  Icon: ButtonIcon,
});

Button.displayName = 'Button';
ButtonRoot.displayName = 'Button.Root';
ButtonLabel.displayName = 'Button.Label';
ButtonSpinner.displayName = 'Button.Spinner';
ButtonIcon.displayName = 'Button.Icon';
"
`;

exports[`Button snapshots > css mode snapshot 2`] = `
"/* Generated by Crucible — edit freely, re-generate with --force */

.btn {
  --btn-radius: var(--radius-md);
  --btn-font-weight: 500;
  --btn-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;

  display:         inline-flex;
  align-items:     center;
  justify-content: center;
  gap:             calc(var(--spacing-unit) * 2);
  font-family:     var(--font-family);
  font-weight:     var(--btn-font-weight);
  border:          1px solid transparent;
  cursor:          pointer;
  border-radius:   var(--btn-radius);
  transition:      var(--btn-transition);
}

.btn:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px var(--color-background), 0 0 0 4px var(--color-primary);
}

@media (prefers-reduced-motion: reduce) {
  .btn { transition: none; }
}

/* Sizes - standard: xs, sm, md, lg, icon */
.btn--xs    { min-height: 2rem; padding: 0 0.5rem; font-size: 0.75rem; }
.btn--sm    { min-height: calc(var(--spacing-unit) * 9); padding: 0 calc(var(--spacing-unit) * 3); font-size: 0.875rem; }
.btn--md    { min-height: calc(var(--spacing-unit) * 10); padding: 0 calc(var(--spacing-unit) * 4); font-size: 1rem; }
.btn--lg    { min-height: calc(var(--spacing-unit) * 11); padding: 0 calc(var(--spacing-unit) * 8); font-size: 1.125rem; }
.btn--icon  { min-height: 2.5rem; width: 2.5rem; padding: 0; }

/* Variants - standard */
.btn--default   { background: var(--color-primary);   color: var(--color-primary-foreground); border-color: transparent; }
.btn--primary   { background: var(--color-primary);   color: var(--color-primary-foreground); border-color: transparent; }
.btn--secondary { background: var(--color-secondary); color: var(--color-secondary-foreground); border-color: transparent; }
.btn--outline   { background: transparent;           color: var(--color-foreground);        border-color: var(--color-border); }
.btn--ghost     { background: transparent;           color: var(--color-foreground);        border-color: transparent; }
.btn--link      { background: transparent;           color: var(--color-primary);           border-color: transparent; text-decoration: underline; text-underline-offset: 4px; }
.btn--destructive { background: var(--color-destructive); color: var(--color-destructive-foreground); border-color: transparent; }

.btn--default:not(:disabled):hover     { opacity: 0.9; }
.btn--primary:not(:disabled):hover   { opacity: 0.9; }
.btn--secondary:not(:disabled):hover { background: var(--color-secondary); opacity: 0.8; }
.btn--outline:not(:disabled):hover   { background: var(--color-accent); color: var(--color-accent-foreground); }
.btn--ghost:not(:disabled):hover     { background: var(--color-accent); color: var(--color-accent-foreground); }
.btn--link:not(:disabled):hover      { text-decoration: underline; }
.btn--destructive:not(:disabled):hover { opacity: 0.9; }

/* States */
.btn--disabled, .btn:disabled { opacity: 0.45; cursor: not-allowed; }
.btn--loading  { cursor: wait; }

.spinner {
  width: 1em; height: 1em;
  border: 2px solid currentColor;
  border-top-color: transparent;
  border-radius: 50%;
  animation: spin 0.6s linear infinite;
}
@keyframes spin { to { transform: rotate(360deg); } }
"
`;

exports[`Button snapshots > css mode snapshot 3`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Button } from './Button';

const meta: Meta<typeof Button> = {
  title: 'Crucible/Button',
  component: Button,
  parameters: { layout: 'centered' },
  argTypes: {
    variant:  { control: 'select', options: ['default', 'primary', 'secondary', 'outline', 'ghost', 'link', 'destructive'] },
    size:     { control: 'select', options: ['xs', 'sm', 'md', 'lg', 'icon'] },
    loading:  { control: 'boolean' },
    disabled: { control: 'boolean' },
  },
};
export default meta;
type Story = StoryObj<typeof Button>;

export const Default: Story = {
  args: { variant: 'primary', size: 'md' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Button</Button.Label>
    </Button>
  ),
};

export const Primary: Story = {
  args: { variant: 'primary' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Primary Button</Button.Label>
    </Button>
  ),
};
export const Secondary: Story = {
  args: { variant: 'secondary' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Secondary Button</Button.Label>
    </Button>
  ),
};
export const Outline: Story = {
  args: { variant: 'outline' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Outline Button</Button.Label>
    </Button>
  ),
};
export const Ghost: Story = {
  args: { variant: 'ghost' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Ghost Button</Button.Label>
    </Button>
  ),
};
export const Link: Story = {
  args: { variant: 'link' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Link Button</Button.Label>
    </Button>
  ),
};
export const Destructive: Story = {
  args: { variant: 'destructive' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Destructive Button</Button.Label>
    </Button>
  ),
};

export const Xs: Story = {
  args: { size: 'xs' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Xs Size</Button.Label>
    </Button>
  ),
};
export const Sm: Story = {
  args: { size: 'sm' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Sm Size</Button.Label>
    </Button>
  ),
};
export const Md: Story = {
  args: { size: 'md' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Md Size</Button.Label>
    </Button>
  ),
};
export const Lg: Story = {
  args: { size: 'lg' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Lg Size</Button.Label>
    </Button>
  ),
};
export const Icon: Story = {
  args: { size: 'icon' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Icon Size</Button.Label>
    </Button>
  ),
};

export const Loading: Story = {
  args: { variant: 'primary', loading: true },
  render: (args) => (
    <Button {...args}>
      <Button.Spinner />
      <Button.Label>Loading...</Button.Label>
    </Button>
  ),
};

export const Disabled: Story = {
  args: { variant: 'primary', disabled: true },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Disabled</Button.Label>
    </Button>
  ),
};

export const WithIcon: Story = {
  args: { variant: 'primary' },
  render: (args) => (
    <Button {...args}>
      <Button.Icon>🚀</Button.Icon>
      <Button.Label>Launch</Button.Label>
    </Button>
  ),
};
"
`;

exports[`Button snapshots > tailwind mode snapshot 1`] = `
"import React from 'react';

const variantClasses: Record<string, string> = {
  default: 'bg-[var(--color-primary)] text-[var(--color-primary-foreground)] border-transparent hover:opacity-90',
  primary: 'bg-[var(--color-primary)] text-[var(--color-primary-foreground)] border-transparent hover:opacity-90',
  secondary: 'bg-[var(--color-secondary)] text-[var(--color-secondary-foreground)] border-transparent hover:opacity-80',
  outline: 'bg-transparent text-[var(--color-foreground)] border-[var(--color-border)] hover:bg-[var(--color-accent)] hover:text-[var(--color-accent-foreground)]',
  ghost: 'bg-transparent text-[var(--color-foreground)] hover:bg-[var(--color-accent)] hover:text-[var(--color-accent-foreground)]',
  link: 'bg-transparent text-[var(--color-primary)] underline-offset-4 hover:underline border-transparent',
  destructive: 'bg-[var(--color-destructive)] text-[var(--color-destructive-foreground)] border-transparent hover:opacity-90',
 };

const sizeClasses: Record<string, string> = {
  sm: 'px-3 py-1.5 text-sm',
  md: 'px-5 py-2.5 text-base',
  lg: 'px-7 py-3.5 text-lg',
};

export type ButtonVariant = 'default' | 'primary' | 'secondary' | 'outline' | 'ghost' | 'link' | 'destructive';
export type ButtonSize    = 'xs' | 'sm' | 'md' | 'lg' | 'icon';

export interface ButtonProps extends React.ButtonHTMLAttributes<HTMLButtonElement> {
  variant?:  ButtonVariant;
  size?:     ButtonSize;
  loading?:  boolean;
  children:  React.ReactNode;
}

export const ButtonRoot = React.forwardRef<HTMLButtonElement, ButtonProps>(
  ({ variant = 'primary', size = 'md', loading = false, disabled, children, className, ...props }, ref) => {
    const cls = [
      'inline-flex items-center justify-center font-medium transition-colors border-[1.5px] border-transparent',
      'rounded-[var(--radius-md)]',
      'focus-visible:ring-2 focus-visible:ring-[var(--color-primary)] focus-visible:ring-offset-3px outline-none',
      'disabled:opacity-45 disabled:cursor-not-allowed',
      variantClasses[variant],
      sizeClasses[size],
      loading && 'cursor-wait',
      className,
    ].filter(Boolean).join(' ');

    return (
      <button
        ref={ref}
        className={cls}
        disabled={disabled || loading}
        aria-disabled={disabled || loading}
        aria-busy={loading}
        {...props}
      >
        {children}
      </button>
    );
  }
);

export const ButtonLabel = ({ children, className, ...props }: React.HTMLAttributes<HTMLSpanElement>) => (
  <span className={className} {...props}>{children}</span>
);

export const ButtonSpinner = ({ className, ...props }: React.HTMLAttributes<HTMLSpanElement>) => (
  <span
    className={['w-4 h-4 border-2 border-current border-t-transparent rounded-full animate-spin mr-2', className].filter(Boolean).join(' ')}
    aria-hidden="true"
    {...props}
  />
);

export const ButtonIcon = ({ children, className, ...props }: React.HTMLAttributes<HTMLSpanElement>) => (
  <span className={['inline-flex items-center justify-center', className].filter(Boolean).join(' ')} aria-hidden="true" {...props}>{children}</span>
);

export const Button = Object.assign(ButtonRoot, {
  Label: ButtonLabel,
  Spinner: ButtonSpinner,
  Icon: ButtonIcon,
});

Button.displayName = 'Button';
ButtonRoot.displayName = 'Button.Root';
ButtonLabel.displayName = 'Button.Label';
ButtonSpinner.displayName = 'Button.Spinner';
ButtonIcon.displayName = 'Button.Icon';
"
`;

exports[`Button snapshots > tailwind mode snapshot 2`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Button } from './Button';

const meta: Meta<typeof Button> = {
  title: 'Crucible/Button',
  component: Button,
  parameters: { layout: 'centered' },
  argTypes: {
    variant:  { control: 'select', options: ['default', 'primary', 'secondary', 'outline', 'ghost', 'link', 'destructive'] },
    size:     { control: 'select', options: ['xs', 'sm', 'md', 'lg', 'icon'] },
    loading:  { control: 'boolean' },
    disabled: { control: 'boolean' },
  },
};
export default meta;
type Story = StoryObj<typeof Button>;

export const Default: Story = {
  args: { variant: 'primary', size: 'md' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Button</Button.Label>
    </Button>
  ),
};

export const Primary: Story = {
  args: { variant: 'primary' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Primary Button</Button.Label>
    </Button>
  ),
};
export const Secondary: Story = {
  args: { variant: 'secondary' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Secondary Button</Button.Label>
    </Button>
  ),
};
export const Outline: Story = {
  args: { variant: 'outline' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Outline Button</Button.Label>
    </Button>
  ),
};
export const Ghost: Story = {
  args: { variant: 'ghost' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Ghost Button</Button.Label>
    </Button>
  ),
};
export const Link: Story = {
  args: { variant: 'link' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Link Button</Button.Label>
    </Button>
  ),
};
export const Destructive: Story = {
  args: { variant: 'destructive' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Destructive Button</Button.Label>
    </Button>
  ),
};

export const Xs: Story = {
  args: { size: 'xs' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Xs Size</Button.Label>
    </Button>
  ),
};
export const Sm: Story = {
  args: { size: 'sm' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Sm Size</Button.Label>
    </Button>
  ),
};
export const Md: Story = {
  args: { size: 'md' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Md Size</Button.Label>
    </Button>
  ),
};
export const Lg: Story = {
  args: { size: 'lg' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Lg Size</Button.Label>
    </Button>
  ),
};
export const Icon: Story = {
  args: { size: 'icon' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Icon Size</Button.Label>
    </Button>
  ),
};

export const Loading: Story = {
  args: { variant: 'primary', loading: true },
  render: (args) => (
    <Button {...args}>
      <Button.Spinner />
      <Button.Label>Loading...</Button.Label>
    </Button>
  ),
};

export const Disabled: Story = {
  args: { variant: 'primary', disabled: true },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Disabled</Button.Label>
    </Button>
  ),
};

export const WithIcon: Story = {
  args: { variant: 'primary' },
  render: (args) => (
    <Button {...args}>
      <Button.Icon>🚀</Button.Icon>
      <Button.Label>Launch</Button.Label>
    </Button>
  ),
};
"
`;
